# detector_benchmarks

./: .gitignore  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .rootlogon.C  PLOTS_README.md  README.md  Snakefile  Snakefile.8  Snakefile.common  config.yaml  flake.nix  garbage-collect.py  rootlogon.C  snakemake.yml
.github/workflows/: mirror.yaml  trigger-eicweb.yml
benchmarks/LOWQ2/: config.yml  local_config.yml  (+1 more)
benchmarks/rich/: CMakeLists.txt  README.md  config.yml  draw_benchmark.py  run_benchmark.rb
benchmarks/rich/include/: ChargedParticle.h  CherenkovPIDAnalysis.h  RawHitAnalysis.h  ReconstructedParticleAnalysis.h  SimHitAnalysis.h  Tools.h
benchmarks/rich/scripts/: rich_data_gen.py
benchmarks/rich/src/: ChargedParticle.cc  CherenkovPIDAnalysis.cc  RawHitAnalysis.cc  ReconstructedParticleAnalysis.cc  SimHitAnalysis.cc  benchmark.cc
calorimeters/: .rootrc  CentralBarrel_AMEGOX.xml  Crystal_example.xml  ZDC_example.xml  calorimeters_config.yml  dummy_test.sh  dummy_test2.sh  gen_ci_config  makeplot_pion.C  rootlogon.C  run_emcal_barrel_electrons.sh  run_emcal_barrel_pions.sh  run_simulation_crystal_pion.sh  run_simulation_zdc.sh  simple_checking.cxx  simple_checking_crystal.cxx  simple_info_plot_histograms.cxx  topside_defs.xml  zdc_neutrons_reader.cxx
doc/: main.html
include/: benchmark.h  exception.h  mt.h  plot.h  util.h
options/: env.sh
pid/: pid_config.yml
rules/: all_plots.smk
tools/: dev-shell  download.sh
trackers/: dummy_test.sh  roman_pot.xml  roman_pot_hit_eta.cxx  roman_pot_simu.sh  simple_tracking.cxx
util/: build_detector.sh  collect_benchmarks.py  collect_tests.py  compile_analyses.py  parse_cmd.sh  print_env.sh  run_many.py
(+443 files in other folders)
